# lightcxx

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  CTestConfig.cmake  README.md  ci-check.sh  devcontainer.json  docker-compose.yml  sections.yml  setup.sh  setup_dependencies.sh  setup_macos.sh  skipped_sections.txt
testing/: CMakeLists.txt  counted_type.h  intercept_libc.cpp  intercept_libc.h  interceptor.c  interceptor.cpp  interceptor.h  lightcxx_test.cpp  lightcxx_test.h  main.cpp  meta.h  mock.cpp  mock.h  negative_compile_test.c  process_safe_wrapper.c  test.cpp  test.h  test_runner.c  test_unary_trait.h  testing.c  testing.cpp  testing.h  warnings.h
testing/interceptors/: libc.cpp  libc.h
testing/meta/: test_unary_trait.h
tests/: AddComplianceTest.cmake  CMakeLists.txt  ComplianceTests.cmake  LightCXXTests.cmake  wrap_test.c
tests/17/17.10.1/: header_initializer_list_synopsis.cpp
tests/17/17.10.2/: initializer_list_constructors.cpp
tests/17/17.10.3/: initializer_list_access.cpp
tests/17/17.10.4/: initializer_list_range_access.cpp
tests/17/17.2.1/: header_cstddef_synopsis.cpp
tests/17/17.2.2/: header_cstdlib_synopsis.cpp
tests/17/17.2.3/: null_pointers.cpp
tests/17/17.2.4/: sizes_alignments_and_offsets.cpp
tests/17/17.2.5/: byte_type_operations.cpp  non_integer_type.nc.cpp
tests/17/17.3.2/: header_version_synopsis.cpp
tests/17/17.3.3/: header_limits_synopsis.cpp
tests/17/17.3.4.1/: float_round_style.cpp
tests/17/17.3.4.2/: float_denorm_style.cpp
tests/17/17.3.6/: header_climits_synopsis.cpp
tests/17/17.3.7/: header_cfloat_synopsis.cpp
tests/17/17.4.1/: header_cstdint_synopsis.cpp
tests/17/17.5/: _Exit.cpp  abort.cpp  at_quick_exit.cpp  atexit.cpp  exit.cpp  exit_terminate.cpp  quick_exit.cpp  quick_exit_terminate.cpp
tests/17/17.6.1/: header_new_synopsis.cpp
tests/17/17.6.2.1/: aligned_bad_alloc.cpp  aligned_custom_new_handler_abort.cpp  aligned_custom_new_handler_success.cpp  aligned_custom_new_handler_throw_bad_alloc.cpp  aligned_delete_replaced.cpp  aligned_replaced_success.cpp  aligned_replaced_throw_bad_alloc.cpp  aligned_success.cpp  bad_alloc.cpp  custom_new_handler_abort.cpp  custom_new_handler_bad_alloc.cpp  custom_new_handler_success.cpp  delete_replaced.cpp  nothrow_aligned_bad_alloc.cpp  nothrow_aligned_custom_new_handler_abort.cpp  nothrow_aligned_custom_new_handler_bad_alloc.cpp  nothrow_aligned_custom_new_handler_success.cpp  nothrow_aligned_delete_replaced.cpp  nothrow_aligned_replaced_both_success.cpp  nothrow_aligned_replaced_default_bad_alloc.cpp  nothrow_aligned_replaced_default_success.cpp  nothrow_aligned_success.cpp  nothrow_bad_alloc.cpp  nothrow_custom_new_handler_abort.cpp  nothrow_custom_new_handler_bad_alloc.cpp  nothrow_custom_new_handler_success.cpp  nothrow_delete_replaced.cpp  nothrow_replaced_both_success.cpp  nothrow_replaced_default_bad_alloc.cpp  nothrow_replaced_default_success.cpp  nothrow_success.cpp  replaced_bad_alloc.cpp  replaced_success.cpp  success.cpp  unaligned_bad_alloc.cpp  unaligned_custom_new_handler_abort.cpp  unaligned_custom_new_handler_success.cpp  unaligned_custom_new_handler_throw_bad_alloc.cpp  unaligned_replaced_success.cpp  unaligned_replaced_throw_bad_alloc.cpp
tests/17/17.6.2.2/: aligned_bad_alloc.cpp  aligned_custom_new_handler_abort.cpp  aligned_custom_new_handler_success.cpp  aligned_custom_new_handler_throw_bad_alloc.cpp  aligned_delete_replaced.cpp  aligned_replaced_success.cpp  aligned_replaced_throw_bad_alloc.cpp  aligned_success.cpp  bad_alloc.cpp  custom_new_handler_abort.cpp  custom_new_handler_bad_alloc.cpp  custom_new_handler_success.cpp  delete_replaced.cpp  nothrow_aligned_bad_alloc.cpp  nothrow_aligned_custom_new_handler_abort.cpp  nothrow_aligned_custom_new_handler_bad_alloc.cpp  nothrow_aligned_custom_new_handler_success.cpp  nothrow_aligned_delete_replaced.cpp  nothrow_aligned_replaced_both_success.cpp  nothrow_aligned_replaced_default_bad_alloc.cpp  nothrow_aligned_replaced_default_success.cpp  nothrow_aligned_success.cpp  nothrow_bad_alloc.cpp  nothrow_custom_new_handler_abort.cpp  nothrow_custom_new_handler_bad_alloc.cpp  nothrow_custom_new_handler_success.cpp  nothrow_delete_replaced.cpp  nothrow_replaced_both_success.cpp  nothrow_replaced_default_bad_alloc.cpp  nothrow_replaced_default_success.cpp  nothrow_success.cpp  replaced_bad_alloc.cpp  replaced_success.cpp  success.cpp
tests/17/17.6.2.3/: placement_new_and_delete.cpp
tests/17/17.6.2.4/: nothing_to_do.cpp
tests/17/17.6.3.1/: bad_alloc.cpp
tests/17/17.6.3.2/: bad_array_new_length.cpp  natural_bad_array_new_length.cpp
tests/17/17.6.3.3/: new_handler.cpp
tests/17/17.6.3.4/: set_new_handler.cpp
tests/17/17.6.3.5/: get_new_handler.cpp
tests/17/17.6.4/: example.cpp
tests/17/17.6.5/: hardware_interference_size.cpp
tests/17/17.7.1/: header_typeinfo_synopsis.cpp
tests/17/17.7.2/: class_type_info.cpp
tests/17/17.7.3/: class_bad_cast.cpp  natural_bad_cast.cpp
tests/17/17.7.4/: class_bad_typeid.cpp  compiler_generated_throw_bad_typeid.cpp  natural_bad_typeid.cpp
tests/17/17.8.1/: header_source_location_synopsis.cpp
tests/17/17.8.2/: copy_and_move.cpp  named_requirements.cpp
tests/17/17.8.2.1/: construction.cpp
tests/17/17.8.2.2/: observers.cpp
tests/17/17.9.1/: header_exception_synopsis.cpp
tests/17/17.9.2/: class_exception.cpp
tests/17/17.9.3/: class_bad_exception.cpp  natural_bad_exception.cpp
tests/17/17.9.4.1/: default_terminate_handler.cpp  type_terminate_handler.cpp
tests/17/17.9.4.2/: set_terminate.cpp  terminate_after_reset_terminate.cpp  terminate_after_set_terminate.cpp
tests/17/17.9.4.3/: get_terminate.cpp
tests/17/17.9.4.4/: natural_terminate_1.1.cpp  natural_terminate_1.10.cpp  natural_terminate_1.11.par.cpp  natural_terminate_1.11.par_unseq.cpp  natural_terminate_1.11.seq.cpp  natural_terminate_1.11.unseq.cpp  natural_terminate_1.12.cpp  natural_terminate_1.2.cpp  natural_terminate_1.3.cpp  natural_terminate_1.4.cpp  natural_terminate_1.5.cpp  natural_terminate_1.6.cpp  natural_terminate_1.8.cpp  (+3 more)
tests/compliance/: CMakeLists.txt
(+714 files in other folders)
